--- a/css/main2.css
+++ b/css/main2.css
@@ -10,9 +10,7 @@
     font-weight: bold;
   
   }
-* {
-  overflow: hidden;
-}
+
 
 .nav-item {
     font-size: 17px !important;
@@ -65,8 +63,8 @@
   .holder {
  
     background-image: linear-gradient(to right, #0091c6 97%, #be98bb 3%);
-    height: 100vh;
-
+    height: 150vh;
+    overflow: hidden;
     
   }
 
@@ -170,7 +168,7 @@ i {
   -webkit-backdrop-filter: blur(22px);
   backdrop-filter: blur(22px);
   background-color: rgba(160, 201, 225, 0.26);
-  height: 40vh;
+  height: 18%;
   margin-top: 50px;
   width: 93%;
 
@@ -247,7 +245,7 @@ i {
 
 .main-services-bg {
 
-  top: 1%;
+  top: 17px;
   right: -4%;
   border-top-left-radius: 35px;
   width: 100%;
@@ -265,7 +263,7 @@ i {
   backdrop-filter: blur(22px);
   background-color: rgba(200, 231, 250, 0.53);
 
-  top: -33%;
+  top: -720px;
   right: -2%;
   position: relative;
   border-top-left-radius: 35px;
@@ -354,7 +352,7 @@ i {
 }
 .istehlak{
  
-  width: 384px;
+  width: 100%;
   height: 241px;
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
@@ -364,7 +362,7 @@ i {
 
  .lombard
 {
-  width: 384px;
+  width: 100%;
   height: 241px;
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
@@ -373,7 +371,7 @@ i {
 
  .cart
 {
-  width: 384px;
+  width: 100%;
   height: 241px;
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
