--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -216,7 +216,9 @@
    }
 
    .credit-bottom {
-       margin-left: 5px;
+       margin-left: 10px;
+       margin-top: 5px;
+       width: 83%;
    }
    .titles {
        margin-left: -10px;
@@ -227,6 +229,10 @@
    }
    .p-v3 {
     top: -24.5% !important;
+   }
+
+   .credit-top h5 {
+       width: 80%;
    }
    
 }
