--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -191,9 +191,11 @@
  @media only screen and (max-width: 600px) {
      body {
          overflow-y: auto !important;
+         overflow-x: hidden !important;
      }
      .main {
          overflow-y: auto !important;
+         overflow-x: hidden !important;
      }
      .navigation {
          width: 100% !important;
@@ -208,7 +210,7 @@
      }
      #side-drawer {
         height: 100vh;
-        width: 55vw;
+        width: 70vw;
      }
      .navigation .cabinet {
          border: none;
@@ -252,10 +254,9 @@
          display: block !important;
      } */
      .main-services .header .header-right div {
-        width: 42vw;
-     
-    
-        margin-right: 0px !important;
+        width: 37vw;
+       margin-right: 5px !important;
+       height: 6vh;
     }
     .main-services .header h1 {
         font-size: 14px;
@@ -268,10 +269,9 @@
     }
 
     .products .header .header-right div {
-        width: 40vw;
-     
-    
-        margin-right: 0px !important;
+        width: 37vw;
+        margin-right: 5px !important;
+        height: 6vh;
         white-space: nowrap;
     }
     .products .header .header-right div a {
